feat: add withdraw function
